<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.k.cs_soundboard.MainActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="120dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:onClick="playb5"
        android:text="@string/exam_grade"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="64dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginEnd="16dp"
        android:onClick="inEnd"
        android:text="@string/didnt_finish"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:onClick="nuke"
        android:text="@string/final_moments"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintRight_toLeftOf="@+id/button7"
        android:layout_marginRight="32dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/button7"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:onClick="potc"
        android:text="@string/pirates"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button8"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:onClick="gee"
        android:text="@string/happiness"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:onClick="wtf"
        android:text="@string/wtf"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button10"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:onClick="stop"
        android:text="@string/stop"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:onClick="poop"
        android:text="@string/poopsong"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:text="Button"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="383dp"
        android:layout_height="432dp"
        app:srcCompat="@mipmap/nelson"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        tools:layout_editor_absoluteY="135dp" />

</android.support.constraint.ConstraintLayout>
